increase image quality

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <div class="mb-4 flex items-center gap-8">
         <Image
           src={profileImage}
+          quality="max"
           alt="Mohamed Oun's profile picture"
-          width={150}
-          height={150}
           class="rounded-full border-4 border-skin-accent"
         />
         <div>
