--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <section id="hero" class="pb-6 pt-8">
       <div class="mb-4 flex items-center gap-8">
         <Image
+          width={200}
+          height={200}
           src={profileImage}
-          quality="max"
+          quality="high"
           alt="Mohamed Oun's profile picture"
           class="rounded-full border-4 border-skin-accent"
         />
