--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <div class="mb-4 flex items-center gap-8">
         <Image
           width={200}
-          height={200}
+          densities={[1.5, 2]}
           src={profileImage}
           quality="high"
           alt="Mohamed Oun's profile picture"
