--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import PostDetails from "@layouts/PostDetails.astro";
 import getSortedPosts from "@utils/getSortedPosts";
+import { slugifyStr } from "@utils/slugify";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -16,7 +17,7 @@ export async function getStaticPaths() {
   );
 
   const postResult = posts.map((post: CollectionEntry<"blog">) => ({
-    params: { slug: post.slug },
+    params: { slug: slugifyStr(post.data.title) },
     props: { post },
   }));
 
