--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -4,6 +4,7 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
+import TableOfContents from "@components/TableOfContents.astro";
 import { render, type CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import ShareLinks from "@components/ShareLinks.astro";
@@ -27,7 +28,7 @@ const {
   tags,
 } = post.data;
 
-const { Content } = await render(post);
+const { Content, headings } = await render(post);
 
 const ogImageUrl = typeof ogImage === "string" ? ogImage : ogImage?.src;
 const ogUrl = new URL(
@@ -64,6 +65,7 @@ const nextPost =
 
 <Layout {...layoutProps}>
   <Header />
+  <TableOfContents headings={headings} />
 
   <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
     <button
