--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -29,7 +29,20 @@
     display: block;
   }
   body {
-    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base selection:bg-skin-accent/70 selection:text-skin-inverted;
+    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base selection:bg-skin-accent/70 selection:text-skin-inverted;
+  }
+
+  /* Overscroll background effect */
+  :root::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: linear-gradient(
+      rgb(var(--color-fill)) 49.99%,
+      rgb(var(--color-fill)) 50%
+    );
+    z-index: -1;
+    pointer-events: none;
   }
   section,
   footer {
@@ -70,7 +83,7 @@
 
   /* ===== scrollbar ===== */
   html {
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   /* width */
