Rename the blog and give it some Mo flair! Updated README, config, and index to reflect the new title and vibe. Let's go!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,12 +34,12 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           densities={[1.5, 2]}
           src={profileImage}
           quality="high"
-          alt="Mohamed Oun's profile picture"
+          alt="Mo's profile picture"
           class="rounded-full border-4 border-skin-accent"
         />
         <div>
           <h1 class="my-4 inline-block text-3xl font-bold sm:my-8 sm:text-5xl">
-            Mohamed Oun's blog
+            Mo's tech takes
           </h1>
           <a
             target="_blank"
@@ -63,15 +63,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </div>
 
       <p class="my-2">
-        Welcome to my blog. I write about stuff I find interesting, mostly
-        around software, data, and the intersection of both. I don't write often
-        though, so keep your expectations low. You can follow me on
-
-        <a
-          href="https://x.com/mohamed3on"
-          target="_blank"
-          class="underline hover:text-skin-accent hover:no-underline">Twitter</a
-        >, though.
+        Hey, I'm Mo, a staff product engineer obsessed with data and numbers. I
+        write occasionally about software and data insights, and about my side
+        projects.
       </p>
 
       {
